# rfmix

./: .gitignore  Dockerfile  MANUAL.md  Makefile.am  README.md  cmdline-utils.c  cmdline-utils.h  configure.ac  crf.cpp  expand-msp.pl  genetic-map.cpp  genetic-map.h  gensamples.cpp  gensamples.h  hash-table.cpp  hash-table.h  inputline.c  inputline.cpp  inputline.h  kmacros.h  load-input.cpp  load-input.h  md5rng.cpp  md5rng.h  mm.cpp  mm.h  output.cpp  random-forest.cpp  random-forest.h  rfmix.cpp  rfmix.h  s-sample.cpp  s-sample.h  s-subpop.cpp  s-subpop.h  score-fb.pl  score-msp.pl  simulate.cpp  vcf.cpp  vcf.h
